--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "hexo": {
-    "version": "3.3.9"
+    "version": "5.4.0"
   },
   "scripts": {
     "build": "npm run sass; npm run generate; npm run images",
@@ -12,17 +12,16 @@
     "serve": "hexo clean; hexo server",
     "images": "node ./optimizeImages.js",
     "sass": "node-sass ./themes/wecodetheweb/source/_scss/ --output-style compressed -o ./themes/wecodetheweb/source/css/",
+    "sass:dev": "node-sass ./themes/wecodetheweb/source/_scss/ -o ./themes/wecodetheweb/source/css/",
     "sass:watch": "npm run sass:dev; node-sass -w ./themes/wecodetheweb/source/_scss/ -o ./themes/wecodetheweb/source/css/"
   },
   "dependencies": {
     "global": "^4.3.1",
-    "hexo": "^3.2.0",
     "hexo-cli": "^1.0.2",
-    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
@@ -30,6 +29,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "hexo": "^5.4.0",
     "imagemin": "^5.2.2",
     "imagemin-cli": "^3.0.0",
     "imagemin-mozjpeg": "^6.0.0",
